[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Items/QuestionBlock/QuestionBlock.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Sprites/Items/QuestionBlock/question_block1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Sprites/Items/QuestionBlock/question_block2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Sprites/Items/QuestionBlock/question_block3.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "GetItem"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.297302, 2.21914, 6.9644 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -12 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "GetItemSmash"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.378929, 1.86607, 2.82843 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 0.7 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 0.378929, 1.86607, 2.46229 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 3.5 ), Vector2( 0, 0 ) ]
}

[node name="QuestionBlock" type="StaticBody2D"]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )
items = [ 0 ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 2
frames = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GetItem = SubResource( 3 )
anims/GetItemSmash = SubResource( 4 )

[node name="ItemInstancingPosition" type="Position2D" parent="."]
position = Vector2( 0, -17 )
[connection signal="get_item" from="." to="." method="_on_QuestionBlock_get_item"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
